welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:17: error: value unary_! is not a member of java.awt.Color
				}while(!colIni == c)
                                       ^